--- a/package.json
+++ b/package.json
@@ -9,9 +9,13 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@react-three/drei": "^9.13.0",
+    "@react-three/fiber": "^8.0.22",
     "next": "12.1.6",
+    "next-transpile-modules": "^9.0.0",
     "react": "18.1.0",
-    "react-dom": "18.1.0"
+    "react-dom": "18.1.0",
+    "three": "^0.141.0"
   },
   "devDependencies": {
     "eslint": "8.16.0",
